Fix previous button being too small on chromium

--- a/led_web/data/style.css
+++ b/led_web/data/style.css
@@ -33,7 +33,7 @@ button:hover {
 	cursor:pointer;
 }
 .pageButton {
-	width:75px;
+	width:80px;
 	height:25px;
 	font-size:12px;
 	margin:0 5px 0 5px;
